<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1"
    android:inputType="number">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_marginBottom"

        android:gravity="center_vertical"
        android:text="เลือกขนาด"
        android:textColor="@color/black"
        android:textSize="@dimen/text_body_big"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/custom_weight_layout"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/more_option">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/plus"
                    android:longClickable="false"
                    android:paddingTop="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="อื่นๆ"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_body_big"
                    android:gravity="clip_vertical|center_horizontal"/>
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:gravity="center_vertical"
        android:text="จำนวน"
        android:textColor="@color/black"
        android:textSize="@dimen/text_body_big"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1"
        android:layout_weight="0.08"
        android:paddingBottom="20sp">

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp">

            <com.gc.materialdesign.views.ButtonRectangle
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:id="@+id/minus"
                android:background="@color/black"
                android:textSize="14sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="-"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:gravity="center" />
        </FrameLayout>

        <EditText
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/rice_quantity"
            android:layout_gravity="center"
            android:textSize="@dimen/text_body_big"
            android:numeric="decimal"
            android:gravity="top|center"
            android:imeOptions="actionDone"
            android:text="0"
            />

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp">

            <com.gc.materialdesign.views.ButtonRectangle
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:id="@+id/plus"
                android:background="@color/black"
                android:textSize="14sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="+"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:gravity="center" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="กระสอบ"
            android:layout_gravity="center"
            android:textSize="@dimen/text_body_big"
            android:layout_marginLeft="@dimen/layout_marginLeft"
            android:textColor="@color/black" />
    </LinearLayout>

    <com.gc.materialdesign.views.ButtonRectangle
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orange1"
        android:text="คำนวณ"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/calculate_wet_button"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="gone"
        android:id="@+id/wet_result_layout"
        android:paddingBottom="20sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:gravity="center_vertical"
            android:text="น้ำหนักข้าวสด"
            android:textColor="@color/black"
            android:textSize="@dimen/text_body_big"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weight_wet_sumary"
            android:textSize="@dimen/text_body"
            android:gravity="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer_weight_wet_sumary"
            android:textSize="50dp"
            android:textColor="@color/red1" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2db272"
            android:text="เสร็จสิ้นการคำนวณ"
            android:textSize="12sp"
            android:id="@+id/finish_calculate"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dry_result_layout"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ความชื้น"
            android:textSize="@dimen/text_body_big"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <FrameLayout
                android:layout_width="48dp"
                android:layout_height="48dp">

                <com.gc.materialdesign.views.ButtonRectangle
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:id="@+id/minus_percent"
                    android:background="@color/black"
                    android:textSize="14sp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:text="-"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:gravity="center" />
            </FrameLayout>

            <EditText
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"
                android:ems="10"
                android:id="@+id/rice_humid_percent"
                android:textSize="@dimen/text_body_big"
                android:numeric="decimal"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:text="0"
                />

            <FrameLayout
                android:layout_width="48dp"
                android:layout_height="48dp">

                <com.gc.materialdesign.views.ButtonRectangle
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:id="@+id/plus_percent"
                    android:background="@color/black"
                    android:textSize="14sp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:text="+"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:gravity="center" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="เปอร์เซนต์"
                android:textSize="@dimen/text_body_big"
                android:textColor="@color/black"
                android:layout_marginLeft="10sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weight_dry_sumary"
                android:textSize="@dimen/text_body"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/answer_weight_dry_sumary"
                android:textSize="50dp"
                android:textColor="@color/red1" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>