<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:padding="18dp">

    <EditText
        android:id="@+id/custom_unit_factor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginBottom="14dp"
        android:textSize="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ยกเลิก"
            android:textSize="20dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/ok"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ตกลง"
            android:textSize="20dp"
            android:textColor="@color/orange1"/>


    </LinearLayout>

</LinearLayout>